# harness

./: .gitattributes  .gitignore  .gitlab-ci.yml  CLAUDE.md  LICENSE  Makefile  README.md
.claude/: settings.json  settings.local.json
.claude/hooks/: bash-sensitive-check.sh  git-write-check.sh
.github/workflows/: hugo.yml
ai-service/: .env.example  Dockerfile  docker-compose.yml  gunicorn.conf.py  pyproject.toml
ai-service/sandbox/: Dockerfile
ai-service/src/ai_service/: app.py  config.py
ai-service/src/ai_service/core/: dispatcher.py  scenario.py
ai-service/src/ai_service/middleware/: gitlab_auth.py
ai-service/src/ai_service/routes/: health.py  metrics.py  webhook.py
ai-service/src/ai_service/scenarios/: bugfix.py  code_review.py  story_split.py
ai-service/src/ai_service/services/: claude.py  gitlab.py  sandbox.py
ai-service/src/ai_service/utils/: logger.py
ai-service/tests/: conftest.py
ai-service/tests/integration/: test_webhook_flow.py
ai-service/tests/unit/: test_claude_service.py  test_config.py  test_dispatcher.py  test_gitlab_auth.py  test_gitlab_service.py  test_health.py  test_sandbox.py
ai-service/tests/unit/test_scenarios/: test_bugfix.py  test_code_review.py  test_story_split.py
deploy/: .env  .gitignore  docker-compose.yml  register-runner.sh
deploy/config/: application.properties  lifecycle-biz.properties  (+1 more)
docs/: architecture.md  deployment.md  development.md  hugo.toml
harness-parent/: build.gradle  settings.gradle
lifecycle/: .gitignore  .gitlab-ci.yml  CI-SETUP.md  CLAUDE.md  build.gradle  gradle.properties.example
(+163 files in other folders)
