[project]
name = "ai-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1",
    "gunicorn[gevent]>=23.0",
    "anthropic>=0.40",
    "docker>=7.0",
    "pydantic-settings>=2.7",
    "prometheus-flask-exporter>=0.23",
    "requests>=2.32",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-flask>=1.3", "pytest-mock>=3.14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_service"]
